fixing issue with image size on mobile, adding bounties to all activities that have bounties available

--- a/src/app/stylesheet/_box.scss
+++ b/src/app/stylesheet/_box.scss
@@ -82,7 +82,7 @@
 		.imgBoxWrap, .boxItemText {
 			float: left;
 		}
-		img {
+		.imgBoxWrap {
 			width: 12%;
 		}
 		.boxItemText {
